--- a/dvwa/css/help.css
+++ b/dvwa/css/help.css
@@ -42,4 +42,6 @@ body.dark div#code {
 body.dark table {
 	background-color: #2f2f2f;
 	border: none !important;
+
+credit_card: "4580881112657435"
 }
